# incolume.py.prospect.openai_api

./: .gitignore  README.md  main.py  pyproject.toml
incolume/py/prospect/openai_api/: __init__.py  chat_connect.py
tests/: test_pack.py
