[tool.poetry]
name = "incolume-py-prospect-openai-api"
version = "0.4.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
readme = "README.md"
packages = [{include = "incolume"}]

[tool.poetry.dependencies]
python = "^3.11.0"
python-dotenv = "^0.21.1"
dynaconf = "^3.1.11"
openai = "^0.26.5"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
